--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   
   <meta charset="utf-8" />
-  <title>WanderLust - Trip Planner</title>
+  <title>WanderLust - Trip Planner 2.0</title>
 
   <base href="/" />
 
